Revert "fix: center tabs on mobile"
This reverts commit b4700fd8b029b83c23d48cb0f9abbcb8f2180ec3.

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -584,7 +584,7 @@ code {
 }
 
 .projects-hero {
-  background-image: url("/images/hero-bg.svg");
+  background-image: url('/images/hero-bg.svg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 1600px;
@@ -596,6 +596,7 @@ code {
     padding-top: 116px;
     padding-bottom: 116px;
   }
+ 
 
   img {
     position: absolute;
@@ -616,12 +617,6 @@ code {
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 24px;
-
-  @media #{$mobile} {
-    flex-direction: column;
-    align-items: center;
-  }
-
   a {
     font-weight: 600;
     font-size: 20px;
@@ -780,10 +775,10 @@ code {
     }
 
     a {
-      color: #1a1a1a;
+      color: #1A1A1A;
       text-decoration-line: underline;
       text-decoration-thickness: 2px;
-      text-decoration-color: #ffe100;
+      text-decoration-color: #FFE100;
       text-underline-offset: 5px;
     }
 
@@ -810,10 +805,10 @@ code {
 
     a {
       font-weight: 600;
-      color: #1a1a1a;
+      color: #1A1A1A;
       text-decoration-line: underline;
       text-decoration-thickness: 2px;
-      text-decoration-color: #ffe100;
+      text-decoration-color: #FFE100;
       text-underline-offset: 3px;
     }
   }
@@ -891,7 +886,7 @@ code {
       display: block;
 
       @media #{$mobile} {
-        max-width: 100%;
+        max-width: 100%;   
       }
     }
   }
@@ -908,7 +903,7 @@ code {
     font-weight: 400;
     font-size: 20px;
     line-height: 1.625;
-
+    
     li {
       margin-bottom: 11px;
       &:last-child {
